--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,11 @@
             android:name=".Activity.BasicInfoActivity"
             android:label="@string/basic_info_settings"
             android:theme="@style/AppTheme.NoActionBar"/>
+
+        <activity
+            android:name=".Activity.DataInputActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
+
     </application>
 
 </manifest>
